syntax = "proto3";
package secretbox;

// SecretBoxMetadata is the SecretBox encryption metadata.
message SecretBoxMetadata {}